Página inicial mobile

--- a/style.css
+++ b/style.css
@@ -12,10 +12,6 @@
 
 /* MOBILE-FIRST BY DEFAULT*/
 body {
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* justify-content: center; */
-    /* align-items: center; */
     background-color: #FFFFFF;
     color: #1A1919;
     font-family: "Urbanist";
@@ -39,14 +35,14 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: auto;
+    width: 342px;
     height: 96px;
-    margin: 24px;
-    padding: 0 32px;
+    margin: 24px auto;
+    padding: 0;
 }
 
 .header-image {
-    margin: 0;
+    margin: 0 0 0 32px;
     padding: 0;
 }
 
@@ -68,7 +64,7 @@ nav {
 }
 
 .header-hamburguer-menu {
-    margin: 0;
+    margin: 0 32px 0 0;
     padding: 0;
 }
 
@@ -221,17 +217,15 @@ nav {
     height: 1px;
 }
 
-/* SEGUIR ACA!!!!! */
 /* BOX 4 */
 .box-4 {
-    display: flex;
-    flex-direction: column;
-    margin: 0 24px 120px 24px;
+    width: 342px;
+    margin: 0 auto 96px auto;
     padding: 0;
 }
 
-.box-4 h1 {
-    align-self: center;
+.box-4 > h1 {
+    text-align: center;
     font-size: 40px;
     font-weight: 700;
     padding: 0;
@@ -239,23 +233,37 @@ nav {
 }
 
 .procesos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 24px;
+    margin: 0;
+    padding: 0;
 }
 
 .proceso-box {
     background-color: #F2F2F2;
-    border-radius: 15px;
-    width: 342px;
-    height: 340px;
-}
-
-.proceso-1 {
+    border-radius: 16px;
     display: flex;
     flex-direction: column;
     justify-content: end;
+    width: 342px;
+    height: 340px;
+    margin: 0 0 24px 0;
+    padding: 0;
+}
+
+.proceso-box h1 {
+    font-size: 32px;
+    font-weight: 600;
+    margin: 0 32px 32px 32px;
+    padding: 0;
+}
+
+.proceso-box p {
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0 32px 32px 32px;
+    padding: 0;
+}
+
+.box-image-1 {
     background-image: url(./images/search.svg);
     background-size: 72px;
     background-repeat: no-repeat;
@@ -263,25 +271,7 @@ nav {
     background-position-y: 32px;
 }
 
-.proceso-1 h1 {
-    align-self: flex-start;
-    font-size: 32px;
-    font-weight: 700;
-    padding: 0 32px;
-    margin: 0 0 32px 0;
-}
-
-.proceso-1 p {
-    font-size: 20px;
-    padding: 0 32px;
-    font-weight: 400;
-    margin: 0 0 32px 0;
-}
-
-.proceso-2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
+.box-image-2 {
     background-image: url(./images/judge.svg);
     background-size: 72px;
     background-repeat: no-repeat;
@@ -289,25 +279,7 @@ nav {
     background-position-y: 32px;
 }
 
-.proceso-2 h1 {
-    align-self: flex-start;
-    font-size: 32px;
-    font-weight: 700;
-    padding: 0 32px;
-    margin: 0 0 32px 0;
-}
-
-.proceso-2 p {
-    font-size: 20px;
-    padding: 0 32px;
-    font-weight: 400;
-    margin: 0 0 32px 0;
-}
-
-.proceso-3 {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
+.box-image-3 {
     background-image: url(./images/status-up.svg);
     background-size: 72px;
     background-repeat: no-repeat;
@@ -315,25 +287,7 @@ nav {
     background-position-y: 32px;
 }
 
-.proceso-3 h1 {
-    align-self: flex-start;
-    font-size: 32px;
-    font-weight: 700;
-    padding: 0 32px;
-    margin: 0 0 32px 0;
-}
-
-.proceso-3 p {
-    font-size: 20px;
-    padding: 0 32px;
-    font-weight: 400;
-    margin: 0 0 32px 0;
-}
-
-.proceso-4 {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
+.box-image-4 {
     background-image: url(./images/tick-circle.svg);
     background-size: 72px;
     background-repeat: no-repeat;
@@ -341,41 +295,35 @@ nav {
     background-position-y: 32px;
 }
 
-.proceso-4 h1 {
-    align-self: flex-start;
-    font-size: 32px;
-    font-weight: 700;
-    padding: 0 32px;
-    margin: 0 0 32px 0;
-}
-
-.proceso-4 p {
-    font-size: 20px;
-    padding: 0 32px;
-    font-weight: 400;
-    margin: 0 0 32px 0;
-}
-
 /* BOX 5 */
 .box-5 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    margin: 0 24px 80px 24px;
+    width: 342px;
+    margin: 0 auto 120px auto;
+    padding: 0;
 }
 
-.box-5 h1 {
-    align-self: center;
+.box-5 > h1 {
+    text-align: center;
     font-size: 40px;
     font-weight: 700;
-    margin: 0 0 80px 0;
+    margin: 00;
+    padding: 0;
 }
 
-/* SPACE */
+.servicos {
+    margin: 0;
+    padding: 0;
+}
+
+.servicos-box {
+    padding: 0;
+    margin: 80px 0 0 0;
+}
+
 .space-2 {
     display: flex;
     justify-content: center;
+    margin: 0 0 120px 0;
 }
 
 .space-2 div {
@@ -384,264 +332,252 @@ nav {
     height: 10px;
 }
 
-.servicos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.servicos-box {
-    display: grid;
-    place-items: center;
-    width: 342px;
-    height: 228px;
-    margin-bottom: 40px;
-}
-
 .servicos-box h1 {
+    text-align: center;
     font-size: 32px;
     font-weight: 600;
-    margin: 40px 0 40px 0;
+    margin: 0 0 40px 0;
+    padding: 0;
 }
 
 .servicos-box p {
+    text-align: center;
     font-size: 20px;
     font-weight: 400;
     margin: 0;
+    padding: 0;
 }
 
 /* BOX-6 */
 .box-6 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0 24px 120px 24px;
+    width: 342px;
+    margin: 0 auto 120px auto;
+    padding: 0;
 }
 
 .cliente-1 {
+    background-color: #FF5500;
     border-radius: 16px;
     width: 342px;
     height: 354px;
-    margin-bottom: 24px;
-    padding: 0 32px;
-    background-color: #FF5500;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
     background-image: url(./images/arrow-right.svg);
     background-size: 72px;
     background-repeat: no-repeat;
     background-position-x: 32px;
     background-position-y: 250px;
+    padding: 0;
+    margin: 0 0 24px 0;
 }
 
 .cliente-1 h1 {
     color: #FFFFFF;
     font-size: 32px;
     font-weight: 700;
-    margin: 32px 0 0 0;
+    padding: 32px 0 0 0;
+    margin: 0 32px;
 }
 
 .cliente-2 {
-    border-radius: 16px;
-    width: 342px;
-    height: 470px;
-    margin-bottom: 24px;
-    padding: 0 32px;
     background-color: #F2F2F2;
     display: flex;
     flex-direction: column;
     justify-content: end;
+    border-radius: 16px;
+    width: 342px;
+    height: 470px;
     background-image: url(./images/apple.svg);
     background-size: 72px;
     background-repeat: no-repeat;
     background-position-x: 32px;
     background-position-y: 32px;
+    padding: 0;
+    margin: 0 0 24px 0;
 }
 
 .cliente-2 h1 {
+    color: #1A1919;
     font-size: 32px;
-    font-weight: 600;
-    margin: 0 0 32px 0;
+    font-weight: 700;
+    padding: 0;
+    margin: 0 32px 32px 32px;
 }
 
 .cliente-2 p {
+    color: #1A1919;
     font-size: 20px;
     font-weight: 400;
-    margin: 0 0 64px 0;
+    padding: 0;
+    margin: 0 32px 64px 32px;
 }
 
 .cliente-2 a {
+    border-bottom: 1px solid #FF5500;
     color: #FF5500;
     font-size: 20px;
     font-weight: 500;
-    margin: 0 0 32px 0;
     text-decoration: none;
     width: fit-content;
-    padding-bottom: 9px;
-    border-bottom: 1px solid #FF5500;
+    padding: 0 0 9px 0;
+    margin: 0 32px 32px 32px;
 }
 
 .cliente-3 {
-    border-radius: 16px;
-    width: 342px;
-    height: 445px;
-    padding: 0 32px;
     background-color: #F2F2F2;
     display: flex;
     flex-direction: column;
     justify-content: end;
+    border-radius: 16px;
+    width: 342px;
+    height: 470px;
     background-image: url(./images/nike.svg);
     background-size: 119px;
     background-repeat: no-repeat;
     background-position-x: 32px;
     background-position-y: 56px;
+    padding: 0;
+    margin: 0;
 }
 
 .cliente-3 h1 {
+    color: #1A1919;
     font-size: 32px;
-    font-weight: 600;
-    margin: 0 0 32px 0;
+    font-weight: 700;
+    padding: 0;
+    margin: 0 32px 32px 32px;
 }
 
 .cliente-3 p {
+    color: #1A1919;
     font-size: 20px;
     font-weight: 400;
-    margin: 0 0 64px 0;
+    padding: 0;
+    margin: 0 32px 64px 32px;
 }
 
 .cliente-3 a {
+    border-bottom: 1px solid #FF5500;
     color: #FF5500;
     font-size: 20px;
     font-weight: 500;
-    margin: 0 0 32px 0;
     text-decoration: none;
     width: fit-content;
-    padding-bottom: 9px;
-    border-bottom: 1px solid #FF5500;
+    padding: 0 0 9px 0;
+    margin: 0 32px 32px 32px;
 }
 
 /* BOX 7 */
 .box-7 {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin: 0 0 120px 0;
+    width: 390px;
+    margin: 0 auto 120px auto;
 }
 
-.box-7 .nossa-equipe {
+.box-7 > h1 {
+    text-align: center;
     font-size: 40px;
     font-weight: 700;
-    margin: 0 32px 80px 32px;
+    margin: 0 0 80px 0;
+    padding: 0;
 }
 
 .equipe {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    width: 390px;
+    margin: 0;
+    padding: 0;
 }
 
 .equipe-box {
     display: flex;
-    flex-direction: row;
-    background-color: #F2F2F2;
     width: 390px;
     height: 328px;
-}
-
-.equipe-box div {
-    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .info-1 {
+    background-color: #0D0D0D;
     display: flex;
     flex-direction: column;
     justify-content: end;
-    align-items: flex-start;
-    background-color: #0D0D0D;
-    padding: 0 24px;
+    margin: 0;
+    padding: 0;
 }
 
 .info-1 h1 {
-    text-align: left;
+    color: #FF5500;
     font-size: 20px;
     font-weight: 700;
-    letter-spacing: -0.6px;
-    color: #FF5500;
-    margin: 0 0 16px 0;
+    margin: 0 24px 16px 16px;
+    padding: 0;
 }
 
 .info-1 h2 {
-    text-align: left;
+    color: #FFFFFF;
     font-size: 16px;
     font-weight: 700;
-    letter-spacing: -0.48px;
-    color: #FFFFFF;
-    margin: 0 0 16px 0;
+    margin: 0 24px 16px 16px;
+    padding: 0;
 }
 
 .info-1 p {
-    text-align: left;
-    font-size: 15px;
-    font-weight: 400;
     color: #FFFFFF;
-    margin: 0 0 24px 0;
+    font-size: 16px;
+    font-weight: 400;
+    margin: 0 24px 24px 16px;
+    padding: 0;
 }
 
 /* BLOG */
 .blog {
     background-color: #0D0D0D;
     border-radius: 16px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     width: 342px;
     height: 424px;
-    margin: 0 24px 120px 24px;
+    margin: 0 auto 120px auto;
+    padding: 0;
 }
 
 .title-link {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
-    margin: 32px 32px 0 32px;
+    align-items: end;
+    margin: 0 32px 20px 32px;
+    padding: 32px 0 0 0;
 }
 
 .title-link h1 {
     color: #FF5500;
     font-size: 32px;
+    font-weight: 400;
+    margin: 0;
     padding: 0;
-    margin: 0 0 48px 0;
 }
 
 .title-link a {
-    width: 24px;
-    height: 24px;
     margin: 0;
+    padding: 0;
 }
 
 .p-blog {
-    color: #FFFFFF;
     margin: 0 32px;
+    padding: 0;
 }
 
-.p-blog p {
+.p-blog > p {
+    color: #FFFFFF;
     font-size: 32px;
     font-weight: 400;
-    margin: 0 0 32px 0;
-
+    margin: 0;
+    padding: 0;
 }
 
 /* VAMOS CONVERSAR */
 .vamos-conversar {
     background-color: #FF5500;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
+    border-radius: 16px;
     width: 342px;
     height: 326px;
-    margin: 0 24px 24px 24px;
+    margin: 0 auto 24px auto;
+    padding: 0;
 }
 
 .vamos-conversar h1 {
@@ -649,26 +585,25 @@ nav {
     font-size: 32px;
     font-weight: 400;
     color: #FFFFFF;
-    margin: 32px;
-    padding: 0;
+    margin: 0 32px 32px 32px;
+    padding: 32px 0 0 0;
 }
 
 .vamos-conversar p {
     font-size: 20px;
     font-weight: 400;
     color: #FFFFFF;
-    margin: 0 32px 32px 32px;
+    margin: 0 32px;
+    padding: 0;
 }
 
 /* Formulario */
 form {
     background-color: #F2F2F2;
     border-radius: 16px;
-    display: flex;
-    flex-direction: column;
     width: 342px;
     height: 496px;
-    margin: 0 24px 24px 24px;
+    margin: 0 auto 24px auto;
 }
 
 .form-info,
@@ -688,7 +623,6 @@ form {
     margin-bottom: 40px;
 }
 
-#email,
 #email,
 #mensagem {
     margin-bottom: 40px;
@@ -729,45 +663,67 @@ button {
     width: 100%;
 }
 
+button:hover {
+    cursor: pointer;
+    font-size: 22px;
+    transition: 0.15s;
+}
+
 /* CONTATO */
 .box-8 {
     background-color: #F2F2F2;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
+    width: 342px;
+    height: 287px;
     border-radius: 16px;
-    margin: 0 24px 24px 24px;
+    margin: 0 auto 120px auto;
+}
+
+.telefone {
+    margin: 0 32px 40px 32px;
+    padding: 0;
 }
 
 .telefone h1 {
     color: #FF5500;
     font-size: 20px;
     font-weight: 400;
-    margin: 32px 32px 8px 32px;
+    margin: 0 0 8px 0;
+    padding: 32px 0 0 0;
 }
 
 .telefone p {
     color: #FF5500;
     font-size: 20px;
     font-weight: 600;
+    margin: 0;
+    padding: 0;
+}
+
+.email {
     margin: 0 32px 40px 32px;
+    padding: 0;
 }
 
 .email h1 {
     color: #FF5500;
     font-size: 20px;
     font-weight: 400;
-    margin: 0 32px 8px 32px;
+    margin: 0 0 8px 0;
+    padding: 0;
 }
 
 .email p {
     color: #FF5500;
     font-size: 20px;
     font-weight: 600;
-    margin: 0 32px 40px 32px;
+    margin: 0;
+    padding: 0;
 }
 
 .social {
-    margin: 0 32px 32px 32px;
+    margin: 0 32px;
 }
 
 .social a {
@@ -778,11 +734,79 @@ button {
 /* FOOTER */
 .footer {
     background-color: #FF5500;
-    width: 100%;
+    width: 390px;
     height: 305px;
+    margin: 0 auto;
 }
 
 .box-footer {
+    width: 342px;
+    height: 257px;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.logo-copyright {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 40px;
+    margin: 0 15.5px 40px 15.5px;
+    padding: 24px 0 0 0;
+}
+
+.logo-white-footer img {
+    margin: 0;
+    padding: 0;
+}
+
+.copyright {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.copyright p {
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 400;
+    margin: 0 0 0 16px;
+}
+
+.datos {
+    align-self: center;
+    text-align: center;
+    margin: 0 39.5px;
+    padding: 0;
+}
+
+.datos p {
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 400;
+    width: fit-content;
+    margin: 0 auto 25px auto;
+    padding: 0;
+}
+
+.datos a {
+    text-decoration: none;
+}
+
+.social-footer {
+    text-align: center;
+    margin: 40px 39.5px 24px 39.5px;
+    padding: 0;
+}
+
+.social-footer a {
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    margin-inline: 12px;
+}
+
+/* .box-footer {
     display: flex;
     flex-direction: column;
     margin: 0 39.5px;
@@ -836,4 +860,4 @@ button {
     text-decoration: none;
     padding: 0;
     margin-inline: 12px;
-}
+} */
