--- a/style.css
+++ b/style.css
@@ -102,8 +102,8 @@ nav {
 .article-1 h1 {
     font-size: 32px;
     font-weight: 600;
-    margin: 0 32px;
-    padding: 32px 0 24px 0;
+    margin: 0 32px 0 32px;
+    padding: 32px 0 0 0;
 }
 
 .article-1 p {
