--- a/style.css
+++ b/style.css
@@ -100,9 +100,10 @@ nav {
 }
 
 .article-1 h1 {
+    line-height: 110%;
     font-size: 32px;
     font-weight: 600;
-    margin: 0 32px 0 32px;
+    margin: 0 32px 10px 32px;
     padding: 32px 0 0 0;
 }
 
@@ -111,6 +112,7 @@ nav {
     font-weight: 400;
     margin: 0 32px;
     padding: 0;
+    line-height: normal;
 }
 
 .article-2 {
